2004-11-22  Bart Veer  <bartv@ecoscentric.com>

	* include/synth.h (struct cyg_flash_synth_priv): rename
	cyg_block_info to cyg_flash_block_info

2004-11-21  Bart Veer  <bartv@ecoscentric.com>

	* tests/flash1.c (cyg_user_start):
	CYGSEM_IO_FLASH_LEGACY_DEVICE_API has been removed, use
	CYGHWR_IO_FLASH_DEVICE_LEGACY instead
	* cdl/flash_synth.cdl: CYGHWR_IO_FLASH_DEVICE_V2 is now implicit

2004-09-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth.c (synth_flash_erase_block): Remove asserts which are
	no longer true.

2004-09-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash_synth.c: Allow the use of arbitary sized block.
	* test/flash3.c: Allow the use of small blocks

2004-08-21  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/flash[23].c: Removed calls to cyg_flash_get_block_info()
	and cyg_flash_get_limits() which have been removed. 

2004-08-03  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/flash_synth.cdl: Indicate we use the V2 device API.

2004-07-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* First version. Implements synthetic flash using the new flash
	API.
 	
//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,